--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,7 +31,7 @@ services:
     container_name: crud-react
     environment:
       - API_URL=http://localhost:3000
-      # - API_URL=http://35.203.157.130:3000
+      # - API_URL=https://crud-node.run.place
       - BACKEND_FRAMEWORK=Express.js and MongoDB
     ports:
       - '5173:5173'
