--- a/nginx.config
+++ b/nginx.config
@@ -1,6 +1,14 @@
 server {
     listen 80;
-    server_name 35.203.157.130;
+    listen 443 ssl;
+    server_name crud-node.run.place;
+
+    ssl_certificate /etc/letsencrypt/live/crud-node.run.place/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/crud-node.run.place/privkey.pem;
+
+    if ($scheme != "https") {
+        return 301 https://$server_name$request_uri;
+    }
 
     location / {
         root /var/www/html;
