--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,16 +22,16 @@ services:
       - /app/backend/node_modules
     environment:
       - MONGO_URL=mongodb://mongo:27017/crud
-      # - NODE_ENV=production
-      - NODE_ENV=development
+      - NODE_ENV=production
+      # - NODE_ENV=development
       - PORT=3000
 
   frontend:
     image: karthikeya2100/crud-react:latest
     container_name: crud-react
     environment:
-      - API_URL=http://localhost:3000
-      # - API_URL=https://crud-node.run.place
+      # - API_URL=http://localhost:3000
+      - API_URL=https://crud-app.run.place/node
       - BACKEND_FRAMEWORK=Express.js and MongoDB
     ports:
       - '5173:5173'
