--- a/nginx.config
+++ b/nginx.config
@@ -1,21 +1,30 @@
 server {
     listen 80;
     listen 443 ssl;
-    server_name crud-node.run.place;
+    server_name crud-app.run.place;
 
-    ssl_certificate /etc/letsencrypt/live/crud-node.run.place/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/crud-node.run.place/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/crud-app.run.place/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/crud-app.run.place/privkey.pem;
 
     if ($scheme != "https") {
         return 301 https://$server_name$request_uri;
     }
 
     location / {
-        root /var/www/html;
+        return 301 http://karthikeya-profile.web.app;
+    }
+
+    location /node {
+        alias /var/www/html/node;
         index index.html;
     }
 
-    location /api/ {
-        proxy_pass http://localhost:3000;
+    location /node/assets {
+        alias /var/www/html/node/assets;
+        index index.html;
+    }
+
+    location /node/api {
+        proxy_pass http://localhost:3000/api;
     }
 }
