added django in nginx config

--- a/nginx.config
+++ b/nginx.config
@@ -14,17 +14,29 @@ server {
         return 301 http://karthikeya-profile.web.app;
     }
 
+
     location /node {
         alias /var/www/html/node;
         index index.html;
     }
-
     location /node/assets {
         alias /var/www/html/node/assets;
         index index.html;
     }
-
     location /node/api {
         proxy_pass http://localhost:3000/api;
+    }
+
+
+    location /django {
+        alias /var/www/html/django;
+        index index.html;
+    }
+    location /django/assets {
+        alias /var/www/html/django/assets;
+        index index.html;
+    }
+    location /django/api {
+        proxy_pass http://localhost:3001/api;
     }
 }
